# tod_staff

./: .gitignore  README.md  manage.py  pyproject.toml
leads/: admin.py  models.py  urls.py  views.py
leads/migrations/: 0001_initial.py  0002_activity.py  0003_activity_recording_tasknote.py  0004_category_lead_categories_product_leadproduct.py  0005_lead_products_data.py  0006_remove_lead_budget_and_more.py
leads/templates/leads/: call_recordings.html  lead_create.html  lead_detail.html  lead_list.html  tasks.html
templates/: base.html
theopendecor/: asgi.py  settings.py  urls.py  wsgi.py
users/: urls.py  views.py
users/templates/users/: dashboard.html  login.html
